[project]
name = "inksight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "semantic-text-splitter>=0.27.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
