[project]
name = "inksight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "fastembed>=0.7.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "semantic-text-splitter>=0.27.0",
    "sentence-transformers>=5.0.0",
    "stop-words>=2018.7.23",
    "torch>=2.7.1",
]
